// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`parse ("//foo/bar:wiz") 1`] = `
{
  "includeSubPackages": false,
  "package": "foo/bar",
  "scope": "",
  "target": "wiz",
}
`;

exports[`parse ("//foo/bar") 1`] = `
{
  "includeSubPackages": false,
  "package": "foo/bar",
  "scope": "",
  "target": "bar",
}
`;

exports[`parse ("//foo/bar:all") 1`] = `
{
  "includeSubPackages": false,
  "package": "foo/bar",
  "scope": "",
  "target": "all",
}
`;

exports[`parse ("//foo/...") 1`] = `
{
  "includeSubPackages": true,
  "package": "foo",
  "scope": "",
  "target": undefined,
}
`;

exports[`parse ("//foo/...:all") 1`] = `
{
  "includeSubPackages": true,
  "package": "foo",
  "scope": "",
  "target": "all",
}
`;

exports[`parse ("//foo/...:*") 1`] = `
{
  "includeSubPackages": true,
  "package": "foo",
  "scope": "",
  "target": "*",
}
`;

exports[`parse ("//foo/...:all-targets") 1`] = `
{
  "includeSubPackages": true,
  "package": "foo",
  "scope": "",
  "target": "all-targets",
}
`;

exports[`parse ("//...") 1`] = `
{
  "includeSubPackages": true,
  "package": "",
  "scope": "",
  "target": undefined,
}
`;

exports[`parse ("//:all") 1`] = `
{
  "includeSubPackages": false,
  "package": "",
  "scope": "",
  "target": "all",
}
`;

exports[`parse (":foo") 1`] = `
{
  "includeSubPackages": false,
  "package": "",
  "scope": false,
  "target": "foo",
}
`;

exports[`parse ("bar:wiz") 1`] = `
{
  "includeSubPackages": false,
  "package": "bar",
  "scope": false,
  "target": "wiz",
}
`;

exports[`parse ("bar/wiz") 1`] = `
{
  "includeSubPackages": false,
  "package": "bar/wiz",
  "scope": false,
  "target": "wiz",
}
`;

exports[`parse ("bar:all") 1`] = `
{
  "includeSubPackages": false,
  "package": "bar",
  "scope": false,
  "target": "all",
}
`;

exports[`parse (":all") 1`] = `
{
  "includeSubPackages": false,
  "package": "",
  "scope": false,
  "target": "all",
}
`;

exports[`parse ("...:all") 1`] = `
{
  "includeSubPackages": true,
  "package": "",
  "scope": false,
  "target": "all",
}
`;

exports[`parse ("...") 1`] = `
{
  "includeSubPackages": true,
  "package": "",
  "scope": false,
  "target": undefined,
}
`;

exports[`parse ("bar/...:all") 1`] = `
{
  "includeSubPackages": true,
  "package": "bar",
  "scope": false,
  "target": "all",
}
`;
